@@ -22,9 +22,6 @@
  */
 
 // key: compiler.err.instance.initializer.not.allowed.in.records
-// key: compiler.note.preview.filename
-// key: compiler.note.preview.recompile
-// options: --enable-preview -source ${jdk.version}
 
 record R(int x) {
     {}
